kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k1-dimp-orquestrador
spec:
  type: ClisterIP
  ports:
    port: 3971
    targetPort: 3971
  selector:
    app: k1-dimp-orquestrador
