kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: k1-dimp-orquestradors
spec:
  rules:
  - host: k1-dimp-orquestrador-sit.viavarejo.com.br
    http:
      paths:
      - path: /(.*)
        backend:
          serviceName: k1-dimp-orquestrador
          servicePort: 3971
